cleanup and improvements

--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -15,7 +15,7 @@ html
         div.wrapper.container-fluid
             div#content
                 nav#toptoptop.navbar.navbar-expand-lg.m-0.p-0
-                    a.navbar-brand.override(href='/label/all')
+                    a.navbar-brand.override(href='/label/pvp')
                         img.d-inline-block(src="/img/zkill.png" width="30" height="30" alt="zKillboard wreck icon")
                         span.d-none.d-md-inline-block.text-dark &nbsp;zKillboard (alpha)
                     ul.navbar-nav.mr-auto
@@ -34,7 +34,7 @@ html
                 div.row
                     div.col-12#ztop
                 div#overview.collapse.container-fluid
-                    div.d-flex.p-0.m-0
+                    div.d-flex.flex-nowrap.p-0.m-0
                         div#overview-information.p-0.m-0
                         div.m-auto
                         div#overview-statistics.p-0.m-0
