--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -51,10 +51,13 @@ mixin add_label(label)
 
 mixin tag_image(tag, url, src, name, size, classes)
 	- tag = (tag ? tag : 'span')
+	- let prefetch = '';
+	if url.indexOf('/killmail/') >= 0 
+		- prefetch = 'prefetch'
 	#{tag}(classes=classes)
 		-var onerror = 'this.onerror = null; this.src="https://images.evetech.net/alliances/1/logo?size=' + size + '"';
 		-var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
-		a.override(href=url)
+		a.override(href=url class=prefetch)
 			img.image(src=src title=name alt=name style=imageHolder onerror=onerror)
 
 mixin show_image(tag, type, id, name, size, classes)
