--- a/www/views/kill-list.pug
+++ b/www/views/kill-list.pug
@@ -1,5 +1,5 @@
 div#killlist
 	each val in json
-		- var url = '/cache/1hour/killmail/row/' + val.killmail_id + '.html';
+		- var url = '/cache/1hour/killmail/row/' + val.killmail_id + '.html?v=' + server_started; 
 		- var divid = 'kill-' + val.killmail_id
 		div(fetch=url unfetched="true" id=divid)
