include distinct counts with toptens

--- a/www/views/toptens.pug
+++ b/www/views/toptens.pug
@@ -41,7 +41,9 @@ div#fulltoptenblock
 				div.top10block.mr-4
 					- var name = type.replace('_id', '_name');
 					- var first = arr[0]
-					h5.top10title= type.replace('_id', '').replace('_', ' ') 
+					- var title = type.replace('_id', '').replace('_', ' ') 
+					h6.top10title= (title + 's').replace('ys', 'ies')
+						small.ml-1.integer= distinct[type]
 					+show_image('span', type, first[type], first[name], 128)
 					table.table.table-striped.table-hover.table-sm
 						each value in arr
