--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -53,7 +53,7 @@ mixin tag_image(tag, url, src, name, size, classes)
 	- tag = (tag ? tag : 'span')
 	- let prefetch = '';
 	if url.indexOf('/killmail/') >= 0 
-		- prefetch = 'prefetch'
+		-// prefetch = 'prefetch'
 	#{tag}(classes=classes)
 		-var onerror = 'this.onerror = null; this.src="https://images.evetech.net/alliances/1/logo?size=' + size + '"';
 		-var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
