--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -11,8 +11,8 @@ html
         link(rel='stylesheet' href='/css/spinner.css?v=' + server_started)
         link(rel='stylesheet' href='/css/z.css?v=' + server_started)
 
-    body
-        div.wrapper.container-fluid
+    body#body(style='display: none;')
+        div#top_container.wrapper.container-fluid
             div#content
                 nav#toptoptop.navbar.navbar-expand-lg.m-0.p-0
                     a.navbar-brand.override(href='/label/pvp')
@@ -107,6 +107,8 @@ div.collapse
             div
 div#loading-zone
 
+script(defer src="/js/adblockDetector.min.js")
+
 script(defer src='/js/jquery-3.4.1.min.js')
 script(defer src='/js/jquery.autocomplete-v1.4.11.min.js')
 
@@ -118,3 +120,10 @@ script(defer data-server_start=server_started src='/js/z.js?v=' + server_started
 script
     = 'const server_started= ' + server_started + ';'
     = "const websocket_url= '" + env.websocket_url + "';"
+
+script(async='', src='https://www.googletagmanager.com/gtag/js?id=G-FE4T2DCTQR')
+script.
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-FE4T2DCTQR');
