ok, this was just obnoxious

--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -11,7 +11,7 @@ html
         link(rel='stylesheet' href='/css/spinner.css?v=' + server_started)
         link(rel='stylesheet' href='/css/z.css?v=' + server_started)
 
-    body#body(style='display: none;')
+    body#body
         div#top_container.wrapper.container-fluid
             div#content
                 nav#toptoptop.navbar.navbar-expand-lg.m-0.p-0
